// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expense summary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $235.00
  </h1>
</div>
`;

exports[`should correctly render expense summary with multiple expense 1`] = `
<div>
  <h1>
    Viewing 
    13
     
    expenses
     totalling 
    $235,534,566.00
  </h1>
</div>
`;
